# claude-agent-sdk-rust

./: CLAUDE.md  Cargo.toml  README.md  justfile
.github/workflows/: ci.yml
examples/: quick_start.rs
src/: client.rs  error.rs  lib.rs  query.rs
src/internal/: message_parser.rs  mod.rs  query_handler.rs
src/transport/: mod.rs  subprocess.rs
src/types/: config.rs  content.rs  control.rs  hook.rs  mcp.rs  message.rs  mod.rs  permission.rs  sandbox.rs
